tests/specs/function_overloads.txt
# mod.ts
export function a(b: string): string;
export function a(b: number): number;
export function a(b: string | number): string | number {}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export function a(b: string): string;
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:1
  | 
2 | export function a(b: number): number;
  | ^

# output.txt
Defined in file:///mod.ts:0:1

function a(b: string): string

Defined in file:///mod.ts:1:1

function a(b: number): number



# output.json
[
  {
    "name": "a",
    "declarations": [
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 0,
          "col": 0,
          "byteIndex": 0
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": {
                "repr": "string",
                "kind": "keyword",
                "value": "string"
              }
            }
          ],
          "returnType": {
            "repr": "string",
            "kind": "keyword",
            "value": "string"
          },
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      },
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 1,
          "col": 0,
          "byteIndex": 38
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "value": "number"
              }
            }
          ],
          "returnType": {
            "repr": "number",
            "kind": "keyword",
            "value": "number"
          },
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      },
      {
        "location": {
          "filename": "file:///mod.ts",
          "line": 2,
          "col": 0,
          "byteIndex": 76
        },
        "declarationKind": "export",
        "kind": "function",
        "def": {
          "params": [
            {
              "kind": "identifier",
              "name": "b",
              "optional": false,
              "tsType": {
                "repr": "",
                "kind": "union",
                "value": [
                  {
                    "repr": "string",
                    "kind": "keyword",
                    "value": "string"
                  },
                  {
                    "repr": "number",
                    "kind": "keyword",
                    "value": "number"
                  }
                ]
              }
            }
          ],
          "returnType": {
            "repr": "",
            "kind": "union",
            "value": [
              {
                "repr": "string",
                "kind": "keyword",
                "value": "string"
              },
              {
                "repr": "number",
                "kind": "keyword",
                "value": "number"
              }
            ]
          },
          "hasBody": true,
          "isAsync": false,
          "isGenerator": false,
          "typeParams": []
        }
      }
    ]
  }
]
